--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -2,6 +2,12 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@components/*": ["./src/app/components/*"],
+      "@services/*": ["./src/app/services/*"],
+      "@interfaces/*": [".src/app/model/interfaces/*"],
+      "@enums/*": [".src/app/model/enums/*"]
+    },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
