--- a/supercontestV2.csproj
+++ b/supercontestV2.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.4" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="6.22.4" />
   </ItemGroup>
 
   <ItemGroup>
